--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,22 +8,4 @@ INCLUDE(cmake/ModuleCompileOptions.cmake)
 ModuleSetCompileOptions()
 
 ModuleImport("dmtest" "thirdparty/dmtest")
-LibImport("dmsnowflake" "src/dmsnowflake")
-ExeImport("test" "dmsnowflake;dmtest")
-
-#ADD_CUSTOM_COMMAND(
-#TARGET dmsnowflaketest
-#PRE_BUILD
-#COMMAND ${CMAKE_COMMAND} -E copy_if_different
-#${CMAKE_CURRENT_SOURCE_DIR}/config/test.csv
-#$<TARGET_FILE_DIR:dmsnowflaketest>
-#)
-
-#INSTALL(DIRECTORY include/ DESTINATION include)
-#INSTALL(TARGETS dmsnowflake
-#        RUNTIME DESTINATION bin
-#        LIBRARY DESTINATION lib
-#        ARCHIVE DESTINATION lib)
-
-#SET(DMSNOWFLAKE_LIBS "dmsnowflake")
-#MARK_AS_ADVANCED(${DMSNOWFLAKE_LIBS})
+ExeImport("test" "dmtest")
