--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,9 @@ INCLUDE(cmake/ModuleCompileOptions.cmake)
 ModuleSetCompileOptions()
 
 ModuleImport("dmtest" "thirdparty/dmtest")
-ExeImport("test" "dmtest")
+
+InterfaceImport("dmsnowflake" "include" "")
+
+if (PROJECT_IS_TOP_LEVEL)
+    ExeImport("test" "dmsnowflake;dmtest")
+endif(PROJECT_IS_TOP_LEVEL)
